# django_barter

./: .gitignore  README.md  pyproject.toml
src/: .flake8
src/ads/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/ads/migrations/: 0001_initial.py  0002_rename_product_ads.py  0003_ads_owner_alter_ads_category.py  0004_alter_ads_options_alter_category_options_and_more.py  0005_remove_ads_image_ads_image_url.py  0006_alter_ads_condition_exchangeproposal.py  0007_alter_exchangeproposal_options_and_more.py  0008_alter_ads_condition.py  0009_alter_exchangeproposal_comment.py
src/ads/templates/ads/: ads_confirm_delete.html  ads_form.html  ads_list.html  exchangeproposal_list.html  main.html
src/config/: settings.py  urls.py
src/core/: constants.py  enums.py  mixins.py
src/users/: forms.py  urls.py  views.py
src/users/management/commands/: csu.py
src/users/templates/users/: base.html  login.html  registration.html
